--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "framer-motion": "^12.27.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
+    "openai": "^6.16.0",
+    "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.2",
+    "pdfjs-dist": "^5.4.530",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "stripe": "^20.2.0",
