--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "openai": "^6.16.0",
-    "pdf-parse": "^2.4.5",
+    "pdf-parse-fork": "^1.2.0",
     "pdf2json": "^4.0.2",
-    "pdfjs-dist": "^5.4.530",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "stripe": "^20.2.0",
