--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
+# ===================
+# Dependencies
+# ===================
+node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -10,35 +12,101 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
-
-# next.js
+# ===================
+# Build & Output
+# ===================
 /.next/
 /out/
+/build/
+/dist/
+*.tsbuildinfo
+next-env.d.ts
 
-# production
-/build
+# ===================
+# Environment Files
+# ===================
+.env
+.env.*
+.env.local
+.env.development
+.env.production
+.env.test
+!.env.example
 
-# misc
+# ===================
+# IDE & Editor
+# ===================
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.project
+.settings/
+*.sublime-project
+*.sublime-workspace
+
+# ===================
+# OS Generated
+# ===================
 .DS_Store
-*.pem
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
 
-# debug
+# ===================
+# Logs & Debug
+# ===================
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# ===================
+# Testing & Coverage
+# ===================
+/coverage/
+*.lcov
+.nyc_output/
+/cypress/videos/
+/cypress/screenshots/
+/playwright-report/
+/test-results/
 
-# vercel
-.vercel
+# ===================
+# Cache
+# ===================
+.cache/
+.parcel-cache/
+.turbo/
+*.cache
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# ===================
+# Deployment
+# ===================
+.vercel/
+.netlify/
+.serverless/
 
-#other
+# ===================
+# Misc
+# ===================
+*.pem
+*.key
+*.cert
+*.bak
+*.tmp
+*.temp
+
+# Personal/Project specific
 resume.tex
+LEARNING_ROADMAP.html
+LEARNING_ROADMAP.md
+RAILWAY_DEPLOY.md
